# DescentSelf-learningUTTT

./: README.md
projects/DescentSelf-learning_System_UTTT/cpp/: CMakeLists.txt
projects/DescentSelf-learning_System_UTTT/cpp/include/: parameters.h
projects/DescentSelf-learning_System_UTTT/cpp/include/big_board/: BigBoard.h  big_board_get_set_do.h
projects/DescentSelf-learning_System_UTTT/cpp/include/boards/utils/: big_board_renderer.h
projects/DescentSelf-learning_System_UTTT/cpp/include/selfplay/: Descent.h  SelfPlayer.h
projects/DescentSelf-learning_System_UTTT/cpp/include/shared_memory/: SharedMemory.h  python_config.h
projects/DescentSelf-learning_System_UTTT/cpp/include/state_to_nn_representation/: state_to_channels.h
projects/DescentSelf-learning_System_UTTT/cpp/include/structures/: ReplayBuffer.h  Set_S.h
projects/DescentSelf-learning_System_UTTT/cpp/include/training/: SampleTrainer.h
projects/DescentSelf-learning_System_UTTT/cpp/src/main/: main.cpp
projects/DescentSelf-learning_System_UTTT/cpp/src/shared_memory/: SharedMemory.cpp
projects/GeneralTestingSystem/: CMakeLists.txt
projects/GeneralTestingSystem/include/game_board/big_board/: BigBoard.h  big_board_get_set_do.h
projects/GeneralTestingSystem/include/tournament_system/client/: ClientWrapper.h
projects/GeneralTestingSystem/include/tournament_system/communication/: Communicator.h  ProcessLauncher.h  SocketListener.h
projects/GeneralTestingSystem/include/tournament_system/referee/: RefereeBoard.h  ResultsLogger.h
projects/GeneralTestingSystem/include/tournament_system/tournament/: Referee.h  TournamentRunner.h
projects/GeneralTestingSystem/src/main/: main.cpp
projects/GeneralTestingSystem/src/tournament_system/referee/: ResultsLogger.cpp
projects/GeneralTestingSystem/src/tournament_system/tournament/: Referee.cpp  TournamentRunner.cpp
projects/PlayersBots/DescentPlayer/: CMakeLists.txt
projects/PlayersBots/DescentPlayer/include/: parameters.h
projects/PlayersBots/DescentPlayer/include/big_board/: BigBoard.h
projects/PlayersBots/DescentPlayer/include/client/: ClientMain.h
projects/PlayersBots/DescentPlayer/include/selfplay/: BatchEvaluator.h  Descent.h  Player.h
projects/PlayersBots/DescentPlayer/include/shared_memory/: SharedMemory.h  python_config.h
projects/PlayersBots/DescentPlayer/include/structures/: Map_T.h
projects/PlayersBots/DescentPlayer/src/main/: main.cpp
projects/PlayersBots/DescentPlayer/src/shared_memory/: SharedMemory.cpp
projects/PlayersBots/MiniMaxPlayer/: CMakeLists.txt
projects/PlayersBots/MiniMaxPlayer/include/client/: ClientMain.h
projects/PlayersBots/MiniMaxPlayer/include/selfplay/: NegamaxAgent.h  Player.h
projects/PlayersBots/MiniMaxPlayer/src/main/: main.cpp
(+55 files in other folders)
